--- a/app/service.yaml
+++ b/app/service.yaml
@@ -10,5 +10,5 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8888
-      nodePort: 30202  # Optional: You can specify a port, or let Kubernetes choose one
+      nodePort: 30202
   type: NodePort
