--- a/app/service.yaml
+++ b/app/service.yaml
@@ -4,9 +4,10 @@ metadata:
   name: my-app-service
   namespace: dev
 spec:
+  type: LoadBalancer
   selector:
     app: my-app
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 8888
+      port: 9000
+      targetPort: 9000
