--- a/app/service.yaml
+++ b/app/service.yaml
@@ -4,10 +4,11 @@ metadata:
   name: my-app-service
   namespace: dev
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: my-app
   ports:
     - protocol: TCP
       port: 8888         # This is the port the service exposes inside the cluster
       targetPort: 8888   # This is the port the pod listens on
+      nodePort: 32000
